<resources>
    <string name="app_name">Maths2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page_text_2">An app for Junior High(Secondary) School Students(\"aged 10 - 15\") and any other interested persons above 15 who meeds a self-teaching maths app</string>
    <string name="page_18">Because if you take the first number and name it, four thousand, one hundred and sixty-eight. it would be under(Th) because of four thousand, 1 would be under hundred(H) because of the one hundred, 6 would be under tens(T) because of sixty(sixty tens) and 8 would be under units(U). using the same procedure for 389 4 and 25, you will get arrangement above</string>
    <string name="exercise_1b_page20">Exercise 1B</string>
    <string name="page20_exe1">1. Group the following numbers in Th, H, T, and U. this first one has been done for you.</string>
    <string name="page21_1">1. Group the following numbers in M, Ht, Tt, H, T and U. \n Note: 3 new Symbols have been added: M for million, Ht for hundred thousand, Tt for ten thousand.</string>
    <string name="page21_2">Dont panic you can! \n Just follow the procedure from the first 3 that have been done for you.</string>
    <string name="page21_2_1">2. Arrange the following sets of numbers under M,Ht,Tt,Th,H,T and U. \n The First one have been done for you</string>
    <string name="page_22_1">Learning outcomes \n At the end of this programme you will be able to:   * know how the number system is developed \n * Put the Hindu - Arabic numeral in tally \n * put numbers in tally in the Hindu-arabic numerals \n * put the hindu Arabic numerals in Roman numerals \n * put the Roman numerals in hindu Arabic \n * Make use of simple codes. \n * Know number System with Place value system. \n * Know how the hindu-Arabic numerals evolved from the Abacus. \n * know the advantages of the Hindu-Arabic numerals. \n * know the Arabic numerals. \n *know how the grouping Th,H,T and U came about</string>
    <string name="page24_1">In our last programme, we learned how the present number system we use today cn be grouped and arranged under thousands, hundreds, tens and units as we prepared grounds for thr excellent study of basic operations our next programme. This programme is designed to help you understand that the number system we use today- the Hindu-Arabic numerals isn\'t natural but came into scene after a series of evolution in our number system.</string>
    <string name="page24_2">The development of numbers began as people counted their belongings. the peoples of the world used various kings of ways to count their possessions. for instance, if a man wanted to keep the records of the number of goats and sheep he had. if he had 17 goats and 21 sheep, he would have to pick up 17 stones or sticks to represent the number of goats he had 21 stones or stickes to represent the number of sheep he had.</string>
    <string name="page24_3">Overtime, since stones are circular in shape and stickes-strokes like, people developed the ability of using circular or stroke like inscription on walla or large stones to represent numbers. so, if a farmer had 17 goats he either drew 17 circular shapes or 17 strokes to represent the number of goats he had as shown below /n 00000000000000000 /n OR /////////////////</string>
    <string name="page24_4">off all the stroke-like manner of representating numbers by different people of the world, the tally system became the first notable, primitive and stroke-like system of representing numbers that drew the attention of early scholar though not ascribed to any nation</string>
    <string name="page25_1">The tally system is a primitive number system that was developed in the course of taking records of an individual\'s or team\'s score or amount gained in an event which could be a sport, game, vote, trade e.t.c   in this system, stroke are used and the number of strokes are used and the number of strokes made are updated to always tally (agree) with the present score of the individual or team in such a way that the intermediate records are not erased. For instance, Team A and B are playing a game, A had scored 19 points and B had scored 13 points. the display on the score board will be as shown below</string>
    <string name="page26"><![CDATA[the Score board shows a perfect use of the tally system. Here tally marks are used. <br> Tally marks are those displayed on the score board.they are always in groups of five for easy counting and always tally(agree) with the score]]></string>
    <string name="page26_2">So, if A now has 21 points and team B, 17 points. the score board will display thus:</string>
    <string name="page26_3">Now on to the next view to see how numbers are put in tally</string>
    <string name="page28">A quick way of representing a number in tally is to divide the number by 5 to get the quotient and the remainder</string>
    <string name="page28_2">This method is quick if you know your division. but on the contrary you can use a sequence of numbers formed through the repeated addition of 5</string>
    <string name="page22_4">So, if you are asked to put 22 in tally, we have thus:</string>
    <string name="page29_1">Using the quick method, if you\'re given the number 22 to put in tally you divide 22 by 5 to get 4 reminder 2. So, the tally representation of 22 will have 4 group of five tallies and 2 tallies.</string>
    <string name="page30_2">93 / 5 = 8 remainder 3. So we make 18 groups of five tallies and three tallies</string>
    <string name="page30_3">Using the following Skill you know, Put the following numbers in tally (a) 52 (b) 89 (C) 103</string>
    <string name="page29_0">Now put 93 in tally using your division skill. when you are done, press the next button.</string>
    <string name="page29_3">You will appreciate this method when you are dealing with numbers close to 100 or above 100.</string>
    <string name="page31_1">On the other hand, we can represent numbers in tally back to hindu- Arabic numerals - todays commonly used number system.</string>
    <string name="page31_2">FIRST METHOD: This is faster if the group of five is less han 10. in this method, you point to the group of five from the left saying the numbers in the sequence formed from the repeated addition of 5 which are the multiples of 5 as stated below</string>
    <string name="page31_4">5 10 15 20 25 30 35 40 and so on. You than add the remaining tally marks to the last multiple of 5. In the case of the example above, we do thus</string>
</resources>
