<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yoma.maths2.Fragments.Page23">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Introduction"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page24_1"
            android:textSize="20sp"
            android:textColor="#000"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page24_2"
            android:textSize="20sp"
            android:textColor="#000"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page24_3"
            android:textSize="20sp"
            android:textColor="#000"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page24_4"
            android:textSize="20sp"
            android:textColor="#000"/>
        <Button
            android:id="@+id/nextbutton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:text="Next"
            android:textColor="#fff"
            android:background="@drawable/button"
            android:layout_gravity="bottom|right"/>

     </LinearLayout>

</ScrollView>
